enforce pycodestyle
